Refactor project structure and enhance functionality
- Updated Docker configuration to include environment variables for PostgreSQL and added a volume for data persistence.
- Introduced a new API structure with versioning and health check endpoints.
- Implemented Kafka producer and consumer services for event handling.
- Added PostgreSQL and S3 storage sinks for event persistence.
- Created a comprehensive error handling middleware for the API.
- Established a rate limiting mechanism for API endpoints.
- Included environment configuration management for better deployment flexibility.
- Added initial database migration for events table.
- Updated package dependencies and scripts for improved development workflow.
- Removed deprecated routes and services to streamline the codebase.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,6 @@
 version: '3.8'
 
 services:
-  ingest:
-    build:
-      container_name: cortex-ingest
-      ports:
-        - 8080:8080
-      environment:
-        - NODE_ENV=production
-
   cortex-db:
     image: postgres:16
     container_name: cortex-db
@@ -19,7 +11,7 @@ services:
       - '5432:5432'
 
   redpanda:
-    image: docker.redpanda.com/vectorized/redpanda:v24.1.4
+    image: redpandadata/redpanda:latest
     container_name: cortex-redpanda
     ports:
       - '9092:9092' # Kafka API
