--- a/package.json
+++ b/package.json
@@ -1,34 +1,63 @@
 {
   "name": "cortex",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Autonomous microservice control plane",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nikhilbajaj98/cortex.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "microservices",
+    "control-plane",
+    "autonomous",
+    "kubernetes",
+    "ml"
+  ],
+  "author": "Nikhil Bajaj",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nikhilbajaj98/cortex/issues"
   },
   "homepage": "https://github.com/nikhilbajaj98/cortex#readme",
+  "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
+    "helmet": "^7.2.0",
+    "joi": "^17.11.0",
+    "kafkajs": "^2.2.4",
+    "pg": "^8.16.3",
+    "pino": "^10.0.0"
+  },
   "devDependencies": {
+    "@types/aws-sdk": "^0.0.42",
+    "@types/body-parser": "^1.19.6",
     "@types/express": "^5.0.3",
+    "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.0",
     "@types/node": "^24.7.2",
+    "@types/pg": "^8.15.5",
+    "@types/supertest": "^2.0.0",
     "axios": "^1.12.2",
     "body-parser": "^2.2.0",
-    "express": "^5.1.0",
-    "kafkajs": "^2.2.4",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
     "nodemon": "^3.1.10",
-    "pino": "^10.0.0",
     "pino-pretty": "^13.1.2",
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
